# android-vulkan-tutorials

tutorial05_triangle/app/: CMakeLists.txt  build.gradle
tutorial05_triangle/app/src/main/: AndroidManifest.xml
tutorial05_triangle/app/src/main/java/com/google/vulkan/tutorials/five/: VkRenderer.kt  VkSurfaceView.kt  VkThread.kt  VulkanSampleActivity.kt
tutorial05_triangle/app/src/main/jni/: VulkanMain.cpp  VulkanMain.hpp  vk_renderer_jni.cpp
tutorial05_triangle/gradle/wrapper/: gradle-wrapper.properties
